[package]
name = "komodo"
version = "0.1.0"
description = "Komodo Blockchain RPC API"
keywords = ["blockchain", "api", "komodo"]
categories = ["komodoblockchain::http-client", "api"]
repository = "https://github.com/seanmonstar/reqwest"
documentation = "https://docs.rs/reqwest"
authors = ["Ashish Mainali <ashish.mainali@mavs.uta.edu>"]
license = "MIT/Apache-2.0"
autotests = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
reqwest = "0.9.22"
